
Version 0.9	- xx August 2001
  * Add warning checks when deleting variables
  * Add check for except Error1, Error2 : # should be except (Error1, Error2) :
  * Fix spurious warning when using parameter as dict for format string
  * Fix spurious warning when using lambda in __init__
  * Get setup.py to work on windows, etc. if don't have /tmp

Version 0.8.3	- 12 August 2001
  * Fix internal errors when doing % on non-strings and other format problems
  * Fix spurious warning when using a constant {} with a format mapping

Version 0.8.2	- 12 August 2001
  * Check format strings even if using global & local constants
  * Add check that [].append() only takes one argument
  * Add check that # parameters are correct for builtin functions
  * Add warnings for --, ++, ~~:
  	"Operator (%s) doesn't exist, statement has no effect"
  * Add -Q/--quiet to be real quiet, only output warning msgs, nothing else
  * Add -y/--classattr config option (warning was not configurable before)
  	(warn if class attribute doesn't exist)
  * Add -x/--miximport config option (warning was not configurable before)
  	(warn if mixing: import/from ... import)
  * Add -u/--callinit config option (warning was not configurable before)
  	(warn if Subclass.__init__() not called)
  * Add constants together on stack when get + to avoid some spurious warnings
  * Fix method and attribute checks for None and Ellipsis
  * Fix spurious warnings when doing a local import and use module in lambda
  * Fix spurious warnings when object attribute has same name as class
  * Fix Object (x) has no attribute warnings for Python 2.2a1 built-in types
  * Change default behaviour to not warn about missing doc strings

Version 0.8.1	- 9 August 2001
  * Fix internal error when referencing a list constant:  [1,2,3][1]
  * Fix internal error for Python 1.5 not catching unicode syntax error
  * Fix deprecation warning for Python 2.2a1 with xrange
  * Fix spurious warning (No module attribute) when doing import x.y as y