@@ -3,6 +3,7 @@ Goals for next release:
 * Improve handling when importing packages
 * Check object method calls for # args
 * Add check for magic #s/consts
+	(need dict of consts, count, max count, consts to ignore)
 * Add check for unsupported operand type(s) for * + / etc
 
 Longer Term goals:
