@@ -5,3 +5,5 @@ Warnings...
 test_input/test39.py:3: No doc string for function func2
 test_input/test39.py:10: "s" is not first method argument
 test_input/test39.py:11: No doc string for class X2
+test_input/test39.py:14: No doc string for function a
+test_input/test39.py:19: No doc string for function a
